<resources>
    <string name="app_name">Still Alert</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="textView_activity_settings">Settings</string>
    <string name="textView_vibration">Vibration</string>
    <string name="textView_sound">Sound</string>
    <string name="textView_idletime">Idle Time</string>
    <string name="textView_threshhold">Sensitivity</string>
    <string name="textView_time">30s</string>
    <string name="time_editText">seconds</string>
    <string name="save_button">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="startTimer">Start Timer</string>
    <string name="settingsPage">Settings Page</string>

</resources>
