<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Switch
        android:id="@+id/switch_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/switch_vibration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <Switch
        android:id="@+id/switch_vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_vibration"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview_settings"
        android:layout_width="125dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/textView_activity_settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textView_vibration"
        android:textSize="18sp"
        android:fontFamily="@font/muli_regular"
        app:layout_constraintEnd_toStartOf="@+id/switch_vibration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sound" />

    <TextView
        android:id="@+id/textView_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="204dp"
        android:text="@string/textView_sound"
        android:textSize="18sp"
        android:fontFamily="@font/muli_regular"
        app:layout_constraintEnd_toStartOf="@+id/switch_sound"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_settings" />

    <TextView
        android:id="@+id/textView_idletime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textView_idletime"
        android:textSize="18sp"
        android:fontFamily="@font/muli_regular"
        app:layout_constraintEnd_toStartOf="@+id/time_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_vibration" />

    <EditText
        android:id="@+id/time_editText"
        android:layout_width="116dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/time_editText"
        android:inputType="time"
        android:textAlignment="center"
        android:fontFamily="@font/muli_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_vibration" />

    <SeekBar
        android:id="@+id/seekBar_threshhold"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_threshhold"
        app:layout_constraintTop_toBottomOf="@+id/time_editText" />

    <TextView
        android:id="@+id/textView_threshhold"
        android:layout_width="87dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/textView_threshhold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_idletime" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="100dp"
        android:onClick="save"
        android:text="@string/save_button"
        android:fontFamily="@font/muli_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="calibrate"
        android:fontFamily="@font/muli_regular"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>